Mon Oct 18 18:34:55 2004  Olli Savia  <ops@iki.fi>

        * ace/os_include/os_signal.h:
          Removed unneeded LynxOS specific pthread_sigmask
          protoype declaration.
        
Fri Oct 15 18:50:19 2004  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_Thread.cpp: In places where the old ace_result_ part of
          the previous incantation of ACE_OSCALL_RETURN was used, create a
          local 'result' variable and use that. ace_result_ is only used in
          the Win32 version of ACE_OSCALL_RETURN.

Fri Oct 15 17:46:29 2004  Steve Huston  <shuston@riverace.com>

        * configure.ac: Added checks for the swab() variants that have:
          (const char*, char*, ssize_t) [SVID3 - ACE_HAS_CONST_CHAR_SWAB]
          and (char*, char*, ssize_t) [Windows, et al - ACE_HAS_NONCONST_SWAB].
          Also altered the ACE_HAS_TYPENAME test to work on Forte C++ 7.

        * m4/config_h.m4: Added ACE_HAS_CONST_CHAR_SWAB and
          ACE_HAS_NONCONST_SWAB.

        * ace/OS_NS_unistd.inl (swab): Added code for ACE_HAS_CONST_CHAR_SWAB
          variant for swab() found on Solaris.

        * ace/config-sunos5.5.h: Replace ACE_LACKS_SWAB with
          ACE_HAS_CONST_CHAR_SWAB. This was determined by running the autoconf
          tests. If it doesn't work uniformly, will need some feature-test
          tweaks.

Fri Oct 15 17:33:18 2004  Steve Huston  <shuston@riverace.com>

        * ace/ACE.h:
        * ace/OS_NS_signal.h: Include config-lite.h instead of config-all.h.
          It drags in too much and some trips up the aC++ compiler. Not sure
          why... it's a tangled web.

        * ace/Message_Block.h: Add #include "ace/config-lite.h" since it needs
          to know config settings.

Fri Oct 15 16:44:29 2004  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_stdlib.cpp (mkstemp_emulation): Related to:
          Fri Oct  8 23:13:13 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>