@@ -1,3 +1,7 @@
+Mon Oct 18 12:15:14 2004  Steve Huston  <shuston@riverace.com>
+
+	* examples/C++NPv2/display_logfile.cpp: Wide-char fixes.
+
 Mon Oct 18 18:34:55 2004  Olli Savia  <ops@iki.fi>
 
         * ace/os_include/os_signal.h:
